adding to the project

--- a/index.html
+++ b/index.html
@@ -15,7 +15,24 @@
 </head>
 
 <body>
+<header class="header">
+<nav class="navbar">
+  <p>Fun Bus</p>
+  <div class="navatags">
+  <a href="#" class="nav" atl="Home Nav">Home</a>
+  <a href="#" class="nav" atl="About Nav">About Us</a>
+  <a href="#" class="nav" atl="Blog Nav">Blog</a>
+  <a href="#" class="nav" atl="Contact Nav">Contact</a>
+</div>
 
+</div>
+
+</nav>
+<img src="img/fun-bus.jpg" class="nav">
+<div class="toptext">
+  <h2>Welcome To Fun Bus!</h2>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam placeat nobis quaerat eos at distinctio consectetur minima aliquam doloremque est? Vero voluptas laborum doloribus autem hic dolorum libero inventore dolores!</p>
+</header>
   
      
   <div class="container home">
